moving compareStrings method to separate notebook

--- a/jupyter/Final_Report.ipynb
+++ b/jupyter/Final_Report.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -23,9 +23,8 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
     "import nbimporter\n",
-    "import P0"
+    "from Util import compareOutput"
    ]
   },
   {
@@ -52,51 +51,7 @@
     "\n",
     "# TODO the line above may need to be phrased better?\n",
     "\n",
-    "## Examples\n",
-    "The following utility method compiles the provided source both with and without optimizations and renders the results nicely for comparison."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "def compareOutput(src):\n",
-    "    P0.compileString(src, 'reg', target='mips')\n",
-    "    P0.compileString(src, 'opt', target='opt')\n",
-    "    \n",
-    "    with open('reg') as f, open('opt') as o:\n",
-    "        reg = ['Orginal Compiler'] + f.read().split('\\n')\n",
-    "        opt = ['Optimized Compiler'] + o.read().split('\\n')\n",
-    "    os.remove('reg')\n",
-    "    os.remove('opt')\n",
-    "    \n",
-    "    tabsize = 8\n",
-    "    def rmtabs(s):\n",
-    "        res = ''\n",
-    "        for i in range(len(s)):\n",
-    "            if s[i] == '\\t':\n",
-    "                res = res + ' ' * (tabsize-(i%tabsize))\n",
-    "            else:\n",
-    "                res = res + s[i]\n",
-    "        return res\n",
-    "\n",
-    "    maxlinelen = 30\n",
-    "    def rightpad(s, n=maxlinelen, c=' '):\n",
-    "        clean = rmtabs(s)\n",
-    "        while len(clean) < n:\n",
-    "            clean = clean + c\n",
-    "        return clean\n",
-    "    \n",
-    "    for i in range(len(reg)):\n",
-    "        ls = rightpad(reg[i]) + '| '\n",
-    "        rs = opt[i] if i < len(opt) else ''\n",
-    "        print(ls+rs)"
+    "## Examples"
    ]
   },
   {
@@ -126,49 +81,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "importing Jupyter notebook from CGmips.ipynb\n",
-      "importing Jupyter notebook from CGopts.ipynb\n",
-      "0 [('b_', 4), ('a_', 4)] {'b_': False, 'a_': False}\n",
-      "b_ sw $t8, b_\n",
-      "a_ sw $t5, a_\n",
-      "0 [('b_', 4), ('a_', 4)] {'b_': True, 'a_': True}\n",
-      "TODO\n",
-      "Orginal Compiler              | Optimized Compiler\n",
-      "        .data                 | \t.data\n",
-      "b_:     .space 4              | b_:\t.space 4\n",
-      "a_:     .space 4              | a_:\t.space 4\n",
-      "        .text                 | \t.text\n",
-      "        .globl main           | \t.globl main\n",
-      "        .ent main             | \t.ent main\n",
-      "main:                         | main:\t\n",
-      "        addi $t8, $0, 4       | \taddi $t8, $0, 4\n",
-      "        sw $t8, b_            | \tsw $t8, b_\n",
-      "        addi $t5, $0, 10      | \taddi $t5, $0, 10\n",
-      "        lw $t7, b_            | \tlw $t7, b_\n",
-      "        add $t5, $t5, $t7     | \tadd $t5, $t5, $t7\n",
-      "        sw $t5, a_            | \tsw $t5, a_\n",
-      "        addi $t2, $0, 5       | \taddi $t2, $0, 5\n",
-      "        sw $t2, b_            | \tlw $a0, a_\n",
-      "        lw $a0, a_            | \tli $v0, 1\n",
-      "        li $v0, 1             | \tsyscall\n",
-      "        syscall               | \tli $v0, 10\n",
-      "        li $v0, 10            | \tsyscall\n",
-      "        syscall               | \t.end main\n",
-      "        .end main             | \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "compareOutput(\"\"\"program p;\n",
     "    var a,b: integer;\n",
@@ -194,45 +113,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 [('c_', 4), ('b_', 4), ('a_', 4)] {'c_': False, 'b_': False, 'a_': False}\n",
-      "a_ sw $t5, a_\n",
-      "0 [('a_', 4)] {'c_': False, 'b_': False, 'a_': True}\n",
-      "TODO\n",
-      "Orginal Compiler              | Optimized Compiler\n",
-      "        .data                 | \t.data\n",
-      "c_:     .space 4              | a_:\t.space 4\n",
-      "b_:     .space 4              | \t.text\n",
-      "a_:     .space 4              | \t.globl main\n",
-      "        .text                 | \t.ent main\n",
-      "        .globl main           | main:\t\n",
-      "        .ent main             | \taddi $t8, $0, 4\n",
-      "main:                         | \taddi $t5, $0, 10\n",
-      "        addi $t8, $0, 4       | \tsw $t5, a_\n",
-      "        sw $t8, b_            | \taddi $t7, $0, 5\n",
-      "        addi $t5, $0, 10      | \tlw $a0, a_\n",
-      "        sw $t5, a_            | \tli $v0, 1\n",
-      "        addi $t7, $0, 5       | \tsyscall\n",
-      "        sw $t7, b_            | \tli $v0, 10\n",
-      "        lw $a0, a_            | \tsyscall\n",
-      "        li $v0, 1             | \t.end main\n",
-      "        syscall               | \n",
-      "        li $v0, 10            | \n",
-      "        syscall               | \n",
-      "        .end main             | \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "compareOutput(\"\"\"program p;\n",
     "    var a,b,c: integer;\n",
@@ -259,53 +146,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 [('a_', 4)] {'a_': False}\n",
-      "a_ sw $t8, a_\n",
-      "1 [('a_', 4)] {'a_': True}\n",
-      "0 [('a_', 4)] {'a_': True}\n",
-      "0 [] {'a_': True}\n",
-      "TODO\n",
-      "Orginal Compiler              | Optimized Compiler\n",
-      "        .data                 | \t.data\n",
-      "a_:     .space 4              | a_:\t.space 4\n",
-      "        .text                 | \t.text\n",
-      "        .globl f              | \t.globl f\n",
-      "        .ent f                | \t.ent f\n",
-      "f:                            | f:\t\n",
-      "        sw $fp, -8($sp)       | \tsub $fp, $sp, 4\n",
-      "        sw $ra, -12($sp)      | \tsub $sp, $fp, 8\n",
-      "        sub $fp, $sp, 4       | \tlw $t8, 0($fp)\n",
-      "        sub $sp, $fp, 8       | \tsw $t8, a_\n",
-      "        lw $t8, 0($fp)        | \tadd $sp, $fp, 4\n",
-      "        sw $t8, a_            | \tlw $ra, -8($fp)\n",
-      "        add $sp, $fp, 4       | \tlw $fp, -4($fp)\n",
-      "        lw $ra, -8($fp)       | \tjr $ra\n",
-      "        lw $fp, -4($fp)       | \t.globl main\n",
-      "        jr $ra                | \t.ent main\n",
-      "        .text                 | main:\t\n",
-      "        .globl main           | \taddi $t5, $0, 2\n",
-      "        .ent main             | \tjal, f\n",
-      "main:                         | \tli $v0, 10\n",
-      "        addi $t5, $0, 2       | \tsyscall\n",
-      "        sw $t5, -4($sp)       | \t.end main\n",
-      "        jal, f                | \n",
-      "        li $v0, 10            | \n",
-      "        syscall               | \n",
-      "        .end main             | \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "compareOutput(\"\"\"program p;\n",
     "    var a: integer;\n",
@@ -333,56 +180,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 [('a_', 4)] {'a_': False}\n",
-      "1 [('a_', 4)] {'a_': False}\n",
-      "0 [('a_', 4)] {'a_': False}\n",
-      "0 [] {'a_': False}\n",
-      "TODO\n",
-      "Orginal Compiler              | Optimized Compiler\n",
-      "        .data                 | \t.data\n",
-      "a_:     .space 4              | \t.text\n",
-      "        .text                 | \t.globl f\n",
-      "        .globl f              | \t.ent f\n",
-      "        .ent f                | f:\t\n",
-      "f:                            | \tsub $fp, $sp, 4\n",
-      "        sw $fp, -8($sp)       | \tsub $sp, $fp, 12\n",
-      "        sw $ra, -12($sp)      | \tlw $t8, 0($fp)\n",
-      "        sub $fp, $sp, 4       | \tadd $t8, $t8, 1\n",
-      "        sub $sp, $fp, 12      | \tsw $t8, -12($fp)\n",
-      "        lw $t8, 0($fp)        | \tlw $a0, -12($fp)\n",
-      "        add $t8, $t8, 1       | \tli $v0, 1\n",
-      "        sw $t8, -12($fp)      | \tsyscall\n",
-      "        lw $a0, -12($fp)      | \tadd $sp, $fp, 4\n",
-      "        li $v0, 1             | \tlw $ra, -8($fp)\n",
-      "        syscall               | \tlw $fp, -4($fp)\n",
-      "        add $sp, $fp, 4       | \tjr $ra\n",
-      "        lw $ra, -8($fp)       | \t.globl main\n",
-      "        lw $fp, -4($fp)       | \t.ent main\n",
-      "        jr $ra                | main:\t\n",
-      "        .text                 | \taddi $t5, $0, 2\n",
-      "        .globl main           | \tjal, f\n",
-      "        .ent main             | \tli $v0, 10\n",
-      "main:                         | \tsyscall\n",
-      "        addi $t5, $0, 2       | \t.end main\n",
-      "        sw $t5, -4($sp)       | \n",
-      "        jal, f                | \n",
-      "        li $v0, 10            | \n",
-      "        syscall               | \n",
-      "        .end main             | \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "compareOutput(\"\"\"program p;\n",
     "    var a: integer;\n",
