prettier code comparison

--- a/jupyter/Util.ipynb
+++ b/jupyter/Util.ipynb
@@ -21,6 +21,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import math\n",
     "import nbimporter\n",
     "import P0"
    ]
@@ -36,16 +37,21 @@
    "outputs": [],
    "source": [
     "def compareOutput(src):\n",
+    "    maxlinelen = 30\n",
+    "    tabsize = 8\n",
+    "    \n",
     "    P0.compileString(src, 'reg', target='mips')\n",
     "    P0.compileString(src, 'opt', target='opt')\n",
     "    \n",
     "    with open('reg') as f, open('opt') as o:\n",
-    "        reg = ['Orginal Compiler'] + f.read().split('\\n')\n",
-    "        opt = ['Optimized Compiler'] + o.read().split('\\n')\n",
+    "        reg = ['Orginal Compiler', '-'*maxlinelen] + f.read().split('\\n')\n",
+    "        opt = ['Optimized Compiler', '-'*maxlinelen] + o.read().split('\\n')\n",
     "    os.remove('reg')\n",
     "    os.remove('opt')\n",
     "    \n",
-    "    tabsize = 8\n",
+    "    lines = len(reg)\n",
+    "    width = int(math.log(lines, 10)) + 1\n",
+    "\n",
     "    def rmtabs(s):\n",
     "        res = ''\n",
     "        for i in range(len(s)):\n",
@@ -55,17 +61,24 @@
     "                res = res + s[i]\n",
     "        return res\n",
     "\n",
-    "    maxlinelen = 30\n",
     "    def rightpad(s, n=maxlinelen, c=' '):\n",
-    "        clean = rmtabs(s)\n",
-    "        while len(clean) < n:\n",
-    "            clean = clean + c\n",
-    "        return clean\n",
+    "        res = rmtabs(s)\n",
+    "        while len(res) < n:\n",
+    "            res = res + c\n",
+    "        return res\n",
     "    \n",
-    "    for i in range(len(reg)):\n",
-    "        ls = rightpad(reg[i]) + '| '\n",
-    "        rs = opt[i] if i < len(opt) else ''\n",
-    "        print(ls+rs)"
+    "    def leftpad(i, n=width, c=' '):\n",
+    "        res = str(i)\n",
+    "        while len(res) < n:\n",
+    "            res = c + res\n",
+    "        return res\n",
+    "        \n",
+    "    for i in range(lines):\n",
+    "        sep = '-' if i == 1 else ' '\n",
+    "        linenum = leftpad(i-1 if i>1 else '', c=sep) + sep + '|' + sep\n",
+    "        ls = rightpad(reg[i]) + '|' + sep\n",
+    "        rs = rightpad(opt[i]) if i < len(opt) else ''\n",
+    "        print(linenum+ls+rs)"
    ]
   }
  ],
