update dead store elim/unused var sections

--- a/jupyter/CGopts.ipynb
+++ b/jupyter/CGopts.ipynb
@@ -244,7 +244,7 @@
     "def runOptimizations():\n",
     "    removeUnusedProcedures()\n",
     "    deadStoreElimination()\n",
-    "    removeUnusedVariables()#genDataDecl)\n",
+    "    removeUnusedVariables()\n",
     "    commonSubexpressionElimination()"
    ]
   },
@@ -343,11 +343,7 @@
    "source": [
     "def deadStoreElimination():\n",
     "    global compiledProcedures\n",
-    "    instructions[curlev] = deadStoreEliminationFromBlock(instructions[curlev])\n",
-    "    newCompiledProcedures = []\n",
-    "    for compiledProc in compiledProcedures:\n",
-    "        newCompiledProcedures.append(deadStoreEliminationFromBlock(compiledProc, True))\n",
-    "    compiledProcedures = newCompiledProcedures"
+    "    instructions[curlev] = deadStoreEliminationFromBlock(instructions[curlev])"
    ]
   },
   {
@@ -363,7 +359,7 @@
     "1. If we have an instruction which is not a `sw` or `lw`, we keep it (add it to the `result` list). \n",
     "1. If it is a `lw` instruction, we determine the location being loaded from and store in the `readAddresses` dict\n",
     "1. If it is a `sw` instruction, we determine the location being stored to. \n",
-    "    - Then we check to see if that location is in the `readAddresses` dict. \n",
+    "    - Then we check to see if that location is in the `readAddresses` dict, and is not one of `$ra` or `fp`; writes to these registers are never removed.\n",
     "    - If so, we have encountered a read from this address already, so we need to keep the instruction\n",
     "    - Otherwise, we can drop the instruction\n",
     "1. Finally, we reverse the `result` list and return it"
@@ -380,6 +376,7 @@
    "outputs": [],
    "source": [
     "def deadStoreEliminationFromBlock(block, insideProc=False):\n",
+    "    ignoreRegs = ['$ra', '$fp', '$sp']\n",
     "    readAddresses = {}\n",
     "    result = []\n",
     "    for elem in block[::-1]:\n",
@@ -396,6 +393,14 @@
     "            # if we're writing here and we've read from it before, keep the instruction\n",
     "            # or if it's a global variable and we're inside a procedure\n",
     "            # otherwise we discard it\n",
+    "            cont = False\n",
+    "            for ir in ignoreRegs:\n",
+    "                if ir in loc:\n",
+    "                    result.append(elem)\n",
+    "                    cont = True\n",
+    "                    break\n",
+    "            if cont:\n",
+    "                continue\n",
     "            if (loc in readAddresses and readAddresses[loc]) or (loc in usedGlobalVars and insideProc):\n",
     "                result.append(elem)\n",
     "                readAddresses[loc] = False\n",
@@ -860,6 +865,7 @@
     "    putInstr('jr $ra')            # return\n",
     "    \n",
     "    # apply optimizations\n",
+    "    instructions[curlev] = deadStoreEliminationFromBlock(instructions[curlev], True)\n",
     "    realAddresses,localsize = removeUnusedVariables()\n",
     "    processProcInstructions(realAddresses, localsize)\n",
     "\n",
