updated writeup for unused vars within procedures

--- a/jupyter/Final_Report.ipynb
+++ b/jupyter/Final_Report.ipynb
@@ -182,7 +182,9 @@
    },
    "source": [
     "### Unused Variable Elimination\n",
-    "The following example demonstrates unused variable elimination; we detect the variables never used and remove them from the program. Since we perform the dead store elimination before this optimization, we are able to detect that variable `b` is never used. Therefore, we are allowed to remove that memory declaration in addition to the declaration for  variable `c`, which is never used (read or written to) in the program."
+    "The following example demonstrates unused variable elimination; we detect the variables never used and remove them from the program. Since we perform the dead store elimination before this optimization, we are able to detect that variable `b` is never used. Therefore, we are allowed to remove that memory declaration in addition to the declaration for  variable `c`, which is never used (read or written to) in the program.\n",
+    "\n",
+    "In the cases of unused variables within function calls, we are able to reduce the amount of stack space allocated by the function (line 12) and must also be careful to remap the used variables to their new memory addresses, ie. if we only allocate 16 bytes on the stack, we should not refer to the value at `$sp - 20`."
    ]
   },
   {
@@ -197,10 +199,18 @@
    "source": [
     "compareOutput(\"\"\"program p;\n",
     "    var a,b,c: integer;\n",
+    "    procedure f;\n",
+    "        var m,n,o: integer;\n",
+    "        begin\n",
+    "        o := 1;\n",
+    "        m := 2;\n",
+    "        write(o)\n",
+    "        end;\n",
     "    begin\n",
     "        b := 4;\n",
     "        a := 10;\n",
     "        b := 5;\n",
+    "        f();\n",
     "        write(a)\n",
     "    end\n",
     "    \"\"\")"
