Unused Procedures Report

--- a/jupyter/Final_Report.ipynb
+++ b/jupyter/Final_Report.ipynb
@@ -47,9 +47,7 @@
     "1. Common Subexpression Elimination\n",
     "\n",
     "## Ordering\n",
-    "We conduct the optimizations in order of size of the affected code: procedures are generally larger than the effective \"lifetime\" of a variable, which in turn are larger than the sizes of the subexpressions we evaluate in Optimization #4. Thus, when moving down to a \"smaller\" chunk, we can be sure that this chunk is used by the surrounding code. For instance, evaluating variable use is pointless when the containing procedure is never used. \n",
-    "\n",
-    "# TODO the line above may need to be phrased better?\n",
+    "We conduct our individual optimizations serially, in the order that we believed would eliminate the largest chunks of code first: procedures are generally larger than the effective \"lifetime\" of a variable, which in turn are larger than the sizes of the subexpressions we evaluate in Optimization #4. Thus, when moving down to a \"smaller\" chunk, we can be sure that this chunk is used by the surrounding code, rather than evaluating variables when the containing procedure is never used. Using this method, we can gaurantee that each sequential optimization has to iterate over the least amount code that we deem useful.\n",
     "\n",
     "## Examples"
    ]
@@ -61,7 +59,50 @@
     "editable": true
    },
    "source": [
-    "### TODO Dom fill in unused procedures"
+    "### Unused Procedures Elimination\n",
+    "\n",
+    "The following example demonstrates unused procedures elimination. An \"unused procedure\" is when a procedure is defined, but that procedure is never used within the main program's function call graph.\n",
+    "\n",
+    "Notice in the example that although we define procedures b, c and e on lines 6, 22 and 42 respectively, we never call these procedures from the main program's function call graph. Notice in the example that procedure b is called within procedure c, but since procedure c is never called from the main program's function call graph, procedure b is also never called from the main program's function call graph. Notice in the example that procedure e is defined in procedure d and procedure d is called from the main program's function call graph, but procedure e is never called from the main program's function call graph.\n",
+    "\n",
+    "Future work includes implementing procedure inlining, which would save the overhead of procedure calls. This would eliminate even more defined procedures and as a result, reduce the amount of jal operations.\n",
+    "Future work includes eliminating unused writes to registers, which would save instructions. However, since these writes are typically add or addi operations, the only savings we will see will be from fewer operations; add and addi operations are typically very quick instructions, especially compared to sw operations, which can take far longer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "compareOutput(\"\"\"program p;\n",
+    "    var a: integer;\n",
+    "    procedure b(i: integer);\n",
+    "        begin\n",
+    "            a := a + i\n",
+    "        end;\n",
+    "    procedure c(i: integer);\n",
+    "        begin\n",
+    "            a := a + i;\n",
+    "            b(1)\n",
+    "        end;\n",
+    "    procedure d(i: integer);\n",
+    "        procedure e(i: integer);\n",
+    "            begin\n",
+    "                a := a + i\n",
+    "            end;\n",
+    "        begin\n",
+    "            a := a + i\n",
+    "        end;\n",
+    "    begin\n",
+    "        a := a + 1;\n",
+    "        d(1)\n",
+    "    end\n",
+    "    \"\"\")"
    ]
   },
   {
@@ -102,7 +143,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Procedures present an interesting complication; since the `$fp` and `$sp` registers are used across procedures, the stores and loads for each of these registers do not happen in the sequence of instructions. We mark these as special case registers, and any `sw` operations writing to these locations are never removed. Additionally, these registers are always used with relative addresses, and those relative addresses are not always consistent throughout the entire use.\n",
     "\n",
@@ -113,7 +157,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -386,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
