Add technical a-link references to CGopts in Final_Report

--- a/jupyter/CGopts.ipynb
+++ b/jupyter/CGopts.ipynb
@@ -255,6 +255,7 @@
     "editable": true
    },
    "source": [
+    "<a id=\"remove-unused-procedures\"></a>\n",
     "The `removeUnusedProcedures` function process the global instruction block, looking for any subroutines. We do this by reading all of the instructions in order, looking for jump and links (`jal` instructions). If we find a `jal`, we know that the memory location of the linked procedure gets read and therefore, must be maintained.\n",
     "\n",
     "Due to the possibility of subroutines accessing other subroutines, as we find a `jal` in the global instruction block, we must also recursively search each nested procedure instructions for additional jump and links via the `recursiveProcedureSearch` function.\n",
@@ -326,6 +327,7 @@
     "editable": true
    },
    "source": [
+    "<a id=\"dead-store-elimination\"></a>\n",
     "The `deadStoreElimination` function process the global instruction block and the instructions in a procedure, looking for stores to memory locations that are unused. We do this by reading all of the instructions in reverse order, looking for writes (`sw` instructions) which are not preceding a read (`lw` instructions). If, reading in reverse order, we find a `sw` without having found a `lw`, we know that the memory location being written to never gets read from, so we can eliminate that `sw` instruction.\n",
     "\n",
     "Due to the way this is detected, there is currently a significant problem that occur with respect to procedure calls: We cannot detect when a global variable is modified inside of one procedure and then read inside of another (or in the global scope)"
@@ -416,6 +418,7 @@
     "editable": true
    },
    "source": [
+    "<a id=\"remove-unused-variables\"></a>\n",
     "The `removeUnusedVariables` function detects unused variables and removes their declarations from the declarations list. Every time we encounter a variable being used, we check if it is a global variable. If so, we mark that global variable as being used. If not, we add it to the list of used variable declarations for the current scope."
    ]
   },
@@ -565,7 +568,8 @@
     "editable": true
    },
    "source": [
-    "### Common subexpression elimination\n",
+    "### Common subexpression elimination<a id=\"common-subexpression-elimination\"></a>\n",
+    "\n",
     "The basic logic for this area is as follows:\n",
     "\n",
     "Create a list of expressions, initially empty.\n",
@@ -652,16 +656,7 @@
     "editable": true
    },
    "source": [
-    "<a id=\"gen-select\"></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
+    "<a id=\"gen-select\"></a>\n",
     "Procedure `genSelect(x, f)` \"generates code\" for `x.f`, provided `f` is in `x.fields`. Only `x.adr` is updated, no code is generated. An updated item is returned.\n",
     "\n",
     "In essence, we treat `x.f` as an entirely different variable than any other field in `x`. In practice, two fields in `x` will typically end up next to each other in memory. However with these \"optimizations\" we don't guarantee that all fields in a record will occupy a contiguous memory space.\n",
@@ -1557,7 +1552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
