--- a/jupyter/Final_Report.ipynb
+++ b/jupyter/Final_Report.ipynb
@@ -41,10 +41,10 @@
     "\n",
     "## Optimizations Implemented\n",
     "We implemented 4 optimizations. The first two remove unused code to reduce memory overhead, the second two simplify existing code for faster execution. \n",
-    "1. Removing Unused Procedures\n",
-    "1. Removing Unused Variables \n",
-    "1. Dead Store Elimination\n",
-    "1. Common Subexpression Elimination\n",
+    "1. Removing Unused Procedures. See [`removeUnusedProcedures()`](/notebooks/CGopts.ipynb#remove-unused-procedures) in CGopts.ipynb for more technical details.\n",
+    "1. Removing Unused Variables. See [`deadStoreElimination()`](/notebooks/CGopts.ipynb#dead-store-elimination) in CGopts.ipynb for more technical details.\n",
+    "1. Dead Store Elimination. See [`removeUnusedVariables()`](/notebooks/CGopts.ipynb#remove-unused-variables) in CGopts.ipynb for more technical details.\n",
+    "1. Common Subexpression Elimination. See [`commonSubexpressionElimination()`](/notebooks/CGopts.ipynb#common-subexpression-elimination) in CGopts.ipynb for more technical details.\n",
     "\n",
     "## Ordering\n",
     "We conduct our individual optimizations serially, in the order that we believed would eliminate the largest chunks of code first: procedures are generally larger than the effective \"lifetime\" of a variable, which in turn are larger than the sizes of the subexpressions we evaluate in Optimization #4. Thus, when moving down to a \"smaller\" chunk, we can be sure that this chunk is used by the surrounding code, rather than evaluating variables when the containing procedure is never used. Using this method, we can gaurantee that each sequential optimization has to iterate over the least amount code that we deem useful.\n",
@@ -65,8 +65,7 @@
     "\n",
     "Notice in the example that although we define procedures b, c and e on lines 6, 22 and 42 respectively, we never call these procedures from the main program's function call graph. Notice in the example that procedure b is called within procedure c, but since procedure c is never called from the main program's function call graph, procedure b is also never called from the main program's function call graph. Notice in the example that procedure e is defined in procedure d and procedure d is called from the main program's function call graph, but procedure e is never called from the main program's function call graph.\n",
     "\n",
-    "Future work includes implementing procedure inlining, which would save the overhead of procedure calls. This would eliminate even more defined procedures and as a result, reduce the amount of jal operations.\n",
-    "Future work includes eliminating unused writes to registers, which would save instructions. However, since these writes are typically add or addi operations, the only savings we will see will be from fewer operations; add and addi operations are typically very quick instructions, especially compared to sw operations, which can take far longer."
+    "Future work includes implementing procedure inlining, which would save the overhead of procedure calls. This would eliminate even more defined procedures and as a result, reduce the amount of jal operations."
    ]
   },
   {
