--- a/jupyter/Final_Report.ipynb
+++ b/jupyter/Final_Report.ipynb
@@ -331,14 +331,13 @@
     "        write(c);\n",
     "        write(d)\n",
     "        end;\n",
-    "    #Below is invalid syntax for P0, but important to note for other compilers and languages:\n",
     "    procedure h;\n",
     "        begin\n",
     "        a := 1;\n",
     "        b := 2;\n",
-    "        c := a + b + 5;\n",
-    "        d := a + b + c + 10;\n",
-    "        e := a + b + c + 20;\n",
+    "        c := a + (b + 5);\n",
+    "        d := a + (b + (c + 10));\n",
+    "        e := a + (b + (c + 20));\n",
     "        write(d);\n",
     "        write(e)\n",
     "        end;\n",
@@ -361,14 +360,16 @@
     "\"\"\"\n",
     "\n",
     "compareOutput(\"\"\"program p;\n",
-    "    var a,b,c,d: integer;\n",
+    "    var a,b,c,d,e: integer;\n",
     "    begin\n",
     "        a := 1;\n",
     "        b := 2;\n",
     "        c := a + b;\n",
-    "        d := a + b;\n",
+    "        d := b + a;\n",
+    "        e := c + (a + b);\n",
     "        write(c);\n",
-    "        write(d)\n",
+    "        write(d);\n",
+    "        write(e)\n",
     "    end\n",
     "    \"\"\")"
    ]
@@ -384,9 +385,9 @@
     "\n",
     "g shows another important aspect of CSEs, that we cannot assume that just because an expression may contain the same variables, it is a safe elimination.  Doing so here would result in an incorrect output of d, as the value of a has changed.  Therefore we must make sure that no changes to any variables in our CSE were changed between instances of it.  Failing to do so will likely lead to incorrect output.\n",
     "\n",
-    "Finally, h, while not valid in P0 and therefore not implemented as shown, is an example that CSEs are not necessarily only 2 variables in size, they may be any size, however the more complex a CSE the more difficult it is to keep track of its individual components and ensure that no unsafe optimization occurs.  This is mitigated by making common subexpression elimination only remove 2 term CSEs and repeatedly run until no more code changes occur, so that at each step two variables are collapsed into one, and if any changes were to occur to any component variables of the CSE, an earlier run of the elimination would correctly determine that the CSE is unsafe.\n",
+    "Finally, h is an example that CSEs are not necessarily only 2 variables in size, they may be any size, however the more complex a CSE the more difficult it is to keep track of its individual components and ensure that no unsafe optimization occurs.  This is partially mitigated by making common subexpression elimination only remove 2 term CSEs and repeatedly run until no more code changes occur, so that at each step two variables are collapsed into one, and if any changes were to occur to any component variables of the CSE, an earlier run of the elimination would correctly determine that the CSE is unsafe.  However, this also may cause the compiler to fail to detect a valid CSE due to 3 or more term CSEs being in different orders, due to commutative operations.\n",
     "\n",
-    "CSE elimination can also run into issues where two expressions are common, but due to communitive properties they are out of order.  For instance, x + y == y + x, but the current implementation of CSE elimination does not handle this."
+    "Note that our CSE elimination is unsafe with code that is not loop invariant, as well as some with jumps backward (be it from looping or some if/else branches).  An edge case also exists where if a CSE is contained within an assignment to a variable within that CSE, CSEE does not run for that case (for instance, if a := a + b existed in the above code after it's initial assignment), even though it would be safe to do so (but not after).  This is to prevent a wide variety of issues that happen when an unsafe assignment occurs on the boundaries of our ranges."
    ]
   },
   {
@@ -534,7 +535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
