refactor compareOutput function

--- a/jupyter/Util.ipynb
+++ b/jupyter/Util.ipynb
@@ -36,10 +36,10 @@
    },
    "outputs": [],
    "source": [
+    "maxlinelen = 30\n",
+    "tabsize = 8\n",
+    "\n",
     "def compareOutput(src):\n",
-    "    maxlinelen = 30\n",
-    "    tabsize = 8\n",
-    "    \n",
     "    P0.compileString(src, 'reg', target='mips')\n",
     "    P0.compileString(src, 'opt', target='opt')\n",
     "    \n",
@@ -48,7 +48,9 @@
     "        opt = ['Optimized Compiler', '-'*maxlinelen] + o.read().split('\\n')\n",
     "    os.remove('reg')\n",
     "    os.remove('opt')\n",
+    "    renderDiff(reg, opt)\n",
     "    \n",
+    "def renderDiff(reg, opt):\n",
     "    lines = len(reg)\n",
     "    width = int(math.log(lines, 10)) + 1\n",
     "\n",
