length check for renderDiff

--- a/jupyter/Util.ipynb
+++ b/jupyter/Util.ipynb
@@ -51,7 +51,7 @@
     "    renderDiff(reg, opt)\n",
     "    \n",
     "def renderDiff(reg, opt):\n",
-    "    lines = len(reg)\n",
+    "    lines = max(len(reg), len(opt))\n",
     "    width = int(math.log(lines, 10)) + 1\n",
     "\n",
     "    def rmtabs(s):\n",
@@ -78,7 +78,7 @@
     "    for i in range(lines):\n",
     "        sep = '-' if i == 1 else ' '\n",
     "        linenum = leftpad(i-1 if i>1 else '', c=sep) + sep + '|' + sep\n",
-    "        ls = rightpad(reg[i]) + '|' + sep\n",
+    "        ls = rightpad(reg[i] if i < len(reg) else '') + '|' + sep\n",
     "        rs = rightpad(opt[i]) if i < len(opt) else ''\n",
     "        print(linenum+ls+rs)"
    ]
